# scidb-19.11.5.f8334b60

./: .gitignore  CMakeBuildFlags.cmake  CMakeLists.txt  LICENSE
src/network/: AuthMessageHandleJob.cpp  Authenticator.cpp  BaseConnection.cpp  BaseConnection.h  CMakeLists.txt  ClientMessageHandleJob.cpp  Connection.cpp  Connection.h  MessageDesc.cpp  MessageDesc.h  MessageHandleJob.cpp  NetworkManager.cpp  OrderedBcast.cpp  OrderedBcast.h  entry.cpp
tests/harness/: CMakeLists.txt  TestTemplate.xml  check_ops.py  log4j.properties  merge_reports.py  modifycdashreport.sh  mu_admin.py  python_verifier.py  python_verifier_unittest.py  report_generator_timer_repart.py  scidbtestharness_env.sh  scidbtestprep.py  test_generator.py  test_generator_perf_repart.py  test_generator_repart.py  test_generator_unittest.py
tests/harness/createload/: XSLTFile.xsl
tests/harness/createload/t/: createload.test
tests/harness/include/: Exceptions.h  cdashreportapp.h  cdashreportstructs.h  defaultexecutor.h  errdb.h  executorfactory.h  global.h  harness.h  harnesstestexecutor.h  helper.h  interface.h  manager.h  reporter.h  scidbtestcaseexecutor.h  suite.h  xmlarchive.h
tests/harness/pyLib/: pushPopCleaners.py  queryMakerLib.py  scidbTestCase.py  simple_test_runner.py  t_other_utils.py
tests/harness/src/: Exceptions.cpp  cdashreportapp.cpp  cdashreportstructs.cpp  defaultexecutor.cpp  errdb.cpp  executorfactory.cpp  harness.cpp  harnesstestexecutor.cpp  helper.cpp  main.cpp  manager.cpp  preparecdashreport.cpp  reporter.cpp  scidbtest.cpp  scidbtestcaseexecutor.cpp  selfTesting.cpp  suite.cpp  xmlarchive.cpp
tests/harness/testcases/: XSLTFile.xsl  disable.tests
tests/harness/testcases/data/: for_cross_between_speed.txt  module_1.txt  parse_errors.tsv
tests/harness/testcases/data/compat.d/: version_18.2.opaque  version_19.11.opaque  version_19.3.opaque
tests/harness/testcases/data/doc/: intensity_data.csv
tests/harness/testcases/t/cdash/: environment.test
tests/harness/testcases/t/checkin/: shared_test_functions.sh
tests/harness/testcases/t/checkin/arrays/tempArrays/: flip_m1_temp_arrays.expected  flip_m1_temp_arrays.test  tempArrayAggregate.test  tempArrayAggregate2.expected  tempArrayAggregate2.test  tempArrayAqlInsert.expected  (+15 more)
tests/harness/testcases/t/checkin/by_tool/: disable.ini  disable.tests  disable_parser.expected  disable_parser.test
tests/harness/testcases/t/checkin/chunk_descriptor_upgrade/: upgrade.expected  upgrade.test
tests/harness/testcases/t/checkin/iqueryabort/: iq_SIGINT_write_1.test  iq_rdstore_temp.test  iq_var_window.expected  iq_var_window.test
tests/harness/testcases/t/checkin/macros/: aggr_operator_macros.expected  aggr_operator_macros.test  cell_instance_imbalance.expected  cell_instance_imbalance.test  function_macros.expected  function_macros.test  system_macros.test
tests/harness/testcases/t/checkin/other/: 4102_operator_nested_levels.test  anonymous_schema.expected  anonymous_schema.test  array_boundary.expected  array_boundary.test  array_literal.expected  array_literal.test  audit.expected  audit.test  average_dn.expected  average_dn.test  average_sp.expected  average_sp.test  binary_opaque_compat.py  binary_opaque_compat.test  boundaries.expected  boundaries.test  chunkcopy.expected  chunkcopy.test  compression.expected  compression.test  count_1.expected  count_1.test  cross_dn.expected  cross_dn.test  data_model_bug_2029.expected  data_model_bug_2029.test  dfa.test  empty.expected  empty.test  ewh.expected  ewh.test  inline_build.expected  inline_build.test  inline_cast.expected  inline_cast.test  inline_repart.expected  inline_repart.test  iquery_3.expected  iquery_3.test  (+78 more)
tests/harness/testcases/t/checkin/storage/: badreadwrite.expected  badreadwrite.sh  badreadwrite.test  dirty_tmp_buffers.expected  dirty_tmp_buffers.test  test_storage_engine.expected  test_storage_engine.test
tests/harness/testcases/t/checkin/update/: check_prior_versions.expected  check_prior_versions.test  default_1.expected  default_1.test  default_2.expected  default_2.test  default_3.expected  default_3.test  default_4.expected  default_4.test  default_5.expected  default_5.test  default_6.expected  default_6.test  default_7.expected  default_7.test  default_9.expected  default_9.test  updatedelta.expected  updatedelta.test  version1.expected  version1.test
tests/harness/testcases/t/checkin/z_restart/: README.txt
tests/harness/testcases/t/weekly/other/: big_chunk.py  big_chunk.test  sdb5366_redim_odc_fix.expected  sdb5366_redim_odc_fix.test
tests/harness/testcases/t/z_valgrind/: z_valgrind.expected  z_valgrind.test
tests/unit/: AddressMetaUnitTests.h  AddressUnitTests.h  ArenaUnitTests.h  CMakeLists.txt  NewUsageOfArena.h  PointerRangeUnitTests.h  unit_tests.cpp
tests/utils/: CMakeLists.txt  append_alternating_values.py  box_of_points.py  daemon.py  find_leaked_nids.sh  four_servers_faked.sh  killquery.sh  mp_data_gen.py  pep8_compliance.py  physplan_remove.sh  wait_for_sync.sh
utils/: CMakeLists.txt  arrays.py  calculate_chunk_length.py  centos-6-x86_64.cfg  centos-7-x86_64.cfg  check_or_replace_copyright.pl  chroot_build.py  chunk_stats.py  disable.py  f77_check.sh  iid.sh  init-scidb.sh  license.py.txt  license.txt  licensing.pl  loadpipe.py  log1.properties  make_packages.sh  make_repo.py  make_repo.sh  oprof.sh  paradigm4.lic  pg_seq_reset.py  prelude.txt.in  rbactool.py  scan_doctor.py  scan_nurse.py  scidb.lic  scidb_backup.py  scidb_config.py  scidb_cores  scidbctl.py  spaam.py  system_report.py  update_alternatives.sh
utils/indexmapper/: CMakeLists.txt  indexmapper.cpp
utils/iquery/: CMakeLists.txt  ConfigUser.h  IqueryConfig.h  commands.h  iquery.cpp  iquery_parser.cpp  iquery_parser.h  keywords.cpp  keywords.h  parser.yy  scanner.h  scanner.ll
utils/scidblib/: CMakeLists.txt  __init__.py  counter.py  iquery_client.py  pgpass_updater.py  psql_client.py  scidb_afl.py  scidb_control.py  scidb_math.py  scidb_progress.py  scidb_psf.py  scidb_rbac.py  scidb_schema.py  scidbctl_common.py  ssh_runner.py  statistics.py  util.py
(+3209 files in other folders)
